// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders CheckboxGroup correctly with defaultValue 1`] = `
<div
  class="zw-checkbox-group zw-checkbox-group--xs zw-checkbox-group--radius"
>
  <div
    class="zw-checkbox-group__inner"
  >
    <span
      class="zw-checkbox zw-checkbox--checked"
    >
      <span
        class="zw-checkbox__widget"
      >
        <span
          class="zw-checkbox__inner"
        />
      </span>
      <span
        class="zw-checkbox__text"
      >
        A
      </span>
      <input
        checked=""
        class="zw-checkbox__input"
        type="checkbox"
        value="a"
      />
    </span>
    <span
      class="zw-checkbox"
    >
      <span
        class="zw-checkbox__widget"
      >
        <span
          class="zw-checkbox__inner"
        />
      </span>
      <span
        class="zw-checkbox__text"
      >
        B
      </span>
      <input
        class="zw-checkbox__input"
        type="checkbox"
        value="b"
      />
    </span>
    <span
      class="zw-checkbox"
    >
      <span
        class="zw-checkbox__widget"
      >
        <span
          class="zw-checkbox__inner"
        />
      </span>
      <span
        class="zw-checkbox__text"
      >
        C
      </span>
      <input
        class="zw-checkbox__input"
        type="checkbox"
        value="c"
      />
    </span>
    <span
      class="zw-checkbox"
    >
      <span
        class="zw-checkbox__widget"
      >
        <span
          class="zw-checkbox__inner"
        />
      </span>
      <span
        class="zw-checkbox__text"
      >
        D
      </span>
      <input
        class="zw-checkbox__input"
        type="checkbox"
        value="d"
      />
    </span>
  </div>
</div>
`;

exports[`Checkbox renders disabled Checkbox correctly 1`] = `
<span
  class="zw-checkbox zw-checkbox--checked zw-checkbox--disabled"
>
  <span
    class="zw-checkbox__widget"
  >
    <span
      class="zw-checkbox__inner"
    />
  </span>
  <span
    class="zw-checkbox__text"
  >
    选择0
  </span>
  <input
    checked=""
    class="zw-checkbox__input"
    disabled=""
    type="checkbox"
    value="0"
  />
</span>
`;

exports[`Checkbox renders disabled CheckboxGroup correctly 1`] = `
<div
  class="zw-checkbox-group zw-checkbox-group--xs zw-checkbox-group--radius"
>
  <div
    class="zw-checkbox-group__inner"
  >
    <span
      class="zw-checkbox"
    >
      <span
        class="zw-checkbox__widget"
      >
        <span
          class="zw-checkbox__inner"
        />
      </span>
      <span
        class="zw-checkbox__text"
      >
        A
      </span>
      <input
        class="zw-checkbox__input"
        type="checkbox"
        value="a"
      />
    </span>
    <span
      class="zw-checkbox"
    >
      <span
        class="zw-checkbox__widget"
      >
        <span
          class="zw-checkbox__inner"
        />
      </span>
      <span
        class="zw-checkbox__text"
      >
        B
      </span>
      <input
        class="zw-checkbox__input"
        type="checkbox"
        value="b"
      />
    </span>
    <span
      class="zw-checkbox"
    >
      <span
        class="zw-checkbox__widget"
      >
        <span
          class="zw-checkbox__inner"
        />
      </span>
      <span
        class="zw-checkbox__text"
      >
        C
      </span>
      <input
        class="zw-checkbox__input"
        type="checkbox"
        value="c"
      />
    </span>
    <span
      class="zw-checkbox"
    >
      <span
        class="zw-checkbox__widget"
      >
        <span
          class="zw-checkbox__inner"
        />
      </span>
      <span
        class="zw-checkbox__text"
      >
        D
      </span>
      <input
        class="zw-checkbox__input"
        type="checkbox"
        value="d"
      />
    </span>
  </div>
</div>
`;

exports[`Checkbox renders indeterminate Checkbox correctly 1`] = `
<span
  class="zw-checkbox zw-checkbox--indeterminate"
>
  <span
    class="zw-checkbox__widget"
  >
    <span
      class="zw-checkbox__inner"
    />
  </span>
  <span
    class="zw-checkbox__text"
  >
    选择0
  </span>
  <input
    class="zw-checkbox__input"
    type="checkbox"
    value="0"
  />
</span>
`;

exports[`Checkbox renders normal Checkbox correctly 1`] = `
<span
  class="zw-checkbox zw-checkbox--checked"
>
  <span
    class="zw-checkbox__widget"
  >
    <span
      class="zw-checkbox__inner"
    />
  </span>
  <span
    class="zw-checkbox__text"
  >
    选择0
  </span>
  <input
    checked=""
    class="zw-checkbox__input"
    type="checkbox"
    value="0"
  />
</span>
`;
